chore: sync pricing and documentation

--- a/frontend/locales/ar.json
+++ b/frontend/locales/ar.json
@@ -13,6 +13,14 @@
     "language_choice": "اختر اللغة",
     "items_count": "{{count}} عنصر",
     "my_shop": "متجري",
+    "validate": "تحقق",
+    "add": "إضافة",
+    "offline": "غير متصل",
+    "info": "معلومات",
+    "all": "الكل",
+    "none": "لا شيء",
+    "yes": "نعم",
+    "no": "لا",
     "periods": {
       "7d": "7ي",
       "30d": "30ي",
@@ -21,8 +29,34 @@
       "custom": "مخصص",
       "from": "من",
       "to": "إلى",
-      "apply": "تطبيق"
+      "apply": "تطبيق",
+      "last_days": "آخر {{count}} يوم"
     }
+  },
+  "tabs": {
+    "home": "الرئيسية",
+    "products": "المنتجات",
+    "pos": "نقطة البيع",
+    "accounting": "المحاسبة",
+    "suppliers": "الموردين",
+    "crm": "العملاء",
+    "orders": "الطلبات",
+    "alerts": "التنبيهات",
+    "settings": "الإعدادات",
+    "users": "المستخدمين",
+    "activity": "النشاط",
+    "admin": "الإدارة",
+    "subscription": "الاشتراك"
+  },
+  "store_selector": {
+    "my_stores": "متاجري",
+    "default_name": "متجري",
+    "new_store": "متجر جديد",
+    "store_name_placeholder": "اسم المتجر",
+    "create": "إنشاء",
+    "load_error": "تعذر تحميل المتاجر",
+    "switch_error": "تعذر تغيير المتجر",
+    "create_error": "تعذر إنشاء المتجر"
   },
   "marketplace": {
     "title": "السوق",
@@ -55,18 +89,37 @@
     "security": "الأمان",
     "about": "حول",
     "logout": "تسجيل الخروج",
+    "logout_confirm": "هل تريد حقاً تسجيل الخروج؟",
     "dark_mode": "الوضع الليلي",
+    "dark_mode_desc": "التبديل بين الوضع الفاتح والداكن",
     "simple_mode": "الوضع البسيط",
+    "simple_mode_desc": "واجهة مبسطة للمبتدئين",
     "notifications": "الإشعارات",
+    "notifications_desc": "تلقي تنبيهات المخزون",
     "sync": "المزامنة",
     "team": "إدارة الفريق",
+    "team_title": "إدارة الفريق",
+    "users_permissions": "المستخدمون والصلاحيات",
+    "users_permissions_desc": "إدارة صلاحيات الموظفين",
     "modules": "الوحدات النشطة",
     "reminders": "قواعد التذكير",
     "version": "الإصدار",
     "language": "اللغة",
     "biometrics": "البصمة الحيوية",
     "biometrics_desc": "استخدام التعرف البيومتري",
-    "pin_required": "فعل رمز PIN أولاً لاستخدام البصمة."
+    "pin_required": "فعل رمز PIN أولاً لاستخدام البصمة.",
+    "change_password": "تغيير كلمة المرور",
+    "export_success": "تم تصدير البيانات:",
+    "export_error": "فشل تصدير البيانات.",
+    "report_subject_required": "يرجى ملء الموضوع والوصف.",
+    "report_sent": "تم إرسال بلاغك إلى المسؤول.",
+    "report_error": "تعذر إرسال البلاغ.",
+    "module_stock": "إدارة المخزون",
+    "module_alerts": "التنبيهات",
+    "module_alert_rules": "قواعد التنبيه",
+    "module_stats": "الإحصائيات",
+    "module_history": "السجل",
+    "module_export": "التصدير"
   },
   "dashboard": {
     "title": "لوحة القيادة",
@@ -86,7 +139,50 @@
     "stock_evolution": "تطور قيمة المخزون (7 أيام)",
     "critical_products": "منتجات حرجة",
     "see_more": "عرض المزيد",
-    "see_less": "عرض أقل"
+    "see_less": "عرض أقل",
+    "recent_alerts": "التنبيهات الأخيرة",
+    "category_distribution": "التوزيع حسب الفئة",
+    "abc_analysis": "تحليل ABC (الأولويات)",
+    "class_a": "الفئة أ",
+    "class_b": "الفئة ب",
+    "class_c": "الفئة ج",
+    "class_a_desc": "80% من إيراداتك",
+    "class_b_desc": "15% من إيراداتك",
+    "class_c_desc": "5% من إيراداتك",
+    "smart_replenishment": "التموين الذكي",
+    "threshold": "الحد",
+    "stock_label": "المخزون",
+    "order_btn": "طلب",
+    "rotating_inventory": "الجرد الدوري",
+    "expected": "المتوقع",
+    "count_stock": "عد المخزون",
+    "count_stock_prompt": "أدخل الكمية الفعلية لـ",
+    "count_btn": "عدّ",
+    "generate_tasks": "إنشاء مهام جديدة",
+    "expiry_alerts": "تنبيهات انتهاء الصلاحية (30 يوم)",
+    "expired": "منتهي الصلاحية!",
+    "statistics_btn": "الإحصائيات",
+    "history_btn": "السجل",
+    "movements_history": "سجل الحركات",
+    "entries": "المدخلات",
+    "exits": "المخرجات",
+    "no_movements": "لا توجد حركات",
+    "default_user": "تاجر",
+    "statistics": "الإحصائيات",
+    "movements_30d": "الحركات (30 يوم)",
+    "net": "صافي",
+    "stock_by_category": "المخزون حسب الفئة",
+    "status_distribution": "توزيع الحالات",
+    "top_products_value": "أفضل المنتجات (قيمة)",
+    "units": "وحدات",
+    "orders_section": "الطلبات",
+    "pending_orders": "قيد الانتظار",
+    "delivered_orders": "تم التوصيل",
+    "total_value": "القيمة الإجمالية",
+    "admin_messages": "رسائل المسؤول",
+    "tip_of_day": "نصيحة اليوم",
+    "see_feature": "عرض هذه الميزة",
+    "preferences_error": "تعذر تحديث تفضيلاتك."
   },
   "products": {
     "title": "المنتجات",
@@ -103,18 +199,61 @@
     "remove_stock": "-مخزون",
     "delete": "حذف",
     "all": "الكل",
-    "catalog": "كتالوج"
+    "catalog": "كتالوج",
+    "total_stock_value": "القيمة الإجمالية للمخزون",
+    "trend_forecast": "الاتجاه / التوقعات",
+    "stock_value": "قيمة المخزون",
+    "stock_label": "المخزون",
+    "unit_piece": "قطعة",
+    "unit_pieces": "قطعة/قطع",
+    "unit_units": "وحدة/وحدات",
+    "default_unit": "قطعة",
+    "modify_btn": "تعديل",
+    "add_btn": "إضافة",
+    "validate_btn": "تحقق",
+    "export_history_error": "تعذر تصدير السجل",
+    "export_products_error": "تعذر تصدير المنتجات",
+    "ai_offline": "اقتراح الذكاء الاصطناعي يتطلب اتصالاً بالإنترنت.",
+    "ai_category_error": "تعذر اقتراح فئة",
+    "ai_price_info": "اقتراح السعر متاح فقط للمنتجات الموجودة",
+    "ai_price_error": "تعذر اقتراح سعر",
+    "ai_desc_error": "تعذر إنشاء الوصف",
+    "invalid_quantity": "يرجى إدخال كمية صالحة",
+    "stock_adjust_error": "فشل تعديل المخزون",
+    "offline_saved": "تم حفظ المنتج محلياً. سيتم مزامنته عند الاتصال بالإنترنت.",
+    "create_error": "تعذر إنشاء/تعديل المنتج",
+    "movements_offline": "حركات المخزون غير متاحة بدون اتصال.",
+    "stock_update_error": "تعذر تحديث المخزون",
+    "categories_offline": "إدارة الفئات غير متاحة بدون اتصال.",
+    "category_save_error": "تعذر حفظ الفئة",
+    "import_offline": "الاستيراد يتطلب اتصالاً بالإنترنت.",
+    "categories_imported": "فئات مستوردة",
+    "categories_exist": "جميع الفئات موجودة بالفعل.",
+    "import_error": "حدث خطأ أثناء الاستيراد.",
+    "pdf_headers": {
+      "product": "المنتج",
+      "category": "الفئة",
+      "qty": "الكمية",
+      "unit": "الوحدة",
+      "purchase_price": "سعر الشراء",
+      "selling_price": "سعر البيع",
+      "value": "القيمة"
+    }
   },
   "accounting": {
     "title": "المحاسبة",
     "revenue": "الإيرادات",
     "sales_count": "عدد المبيعات",
+    "sales_count_value": "{{count}} عملية بيع",
     "avg_basket": "متوسط السلة",
     "total_expenses": "إجمالي المصاريف",
     "expenses": "المصاريف",
     "reports": "التقارير",
+    "report": "تقرير",
     "new_report": "تقرير جديد",
     "add_expense": "تسجيل مصروف",
+    "export_csv": "تصدير CSV",
+    "export_invoice": "تصدير فاتورة",
     "payment_methods": "المبيعات حسب طريقة الدفع",
     "revenue_evolution": "تطور الإيرادات",
     "daily": "يومي",
@@ -162,6 +301,7 @@
     "delete_error": "خطأ في الحذف",
     "confirm_expense": "تأكيد مصروف بمبلغ {{amount}}؟",
     "no_expenses": "لا مصاريف",
+    "expense_lines": "{{count}} سطر(أسطر) مصاريف",
     "expenses_categories": {
       "rent": "إيجار",
       "salary": "راتب",
@@ -189,7 +329,13 @@
     "invoice_ref": "المرجع",
     "invoice_date": "التاريخ",
     "payment_method_label": "طريقة الدفع",
-    "notes_label": "ملاحظات"
+    "notes_label": "ملاحظات",
+    "default_store_name": "متجري",
+    "default_address": "العنوان غير محدد",
+    "total_revenue_kpi": "الإيراد الإجمالي",
+    "gross_margin_kpi": "الهامش الإجمالي",
+    "total_expenses_kpi": "إجمالي المصاريف",
+    "report_generation_error": "خطأ أثناء إنشاء التقرير"
   },
   "orders": {
     "title": "الطلبات",
@@ -281,11 +427,15 @@
   },
   "crm": {
     "title": "إدارة العملاء والولاء",
+    "clients": "العملاء",
     "total_spent": "إجمالي المبيعات",
     "active_clients": "نشطون (30ي)",
     "loyalty_strategy": "استراتيجية الولاء",
     "points": "نقاط الولاء",
+    "points_desc": "تفعيل تراكم النقاط عند البيع",
     "reward_threshold": "حد المكافأة",
+    "promotions": "العروض الترويجية",
+    "create_promotion": "إنشاء عرض ترويجي",
     "marketing": "التسويق",
     "whatsapp_campaign": "حملة واتساب",
     "search_placeholder": "البحث عن عميل...",
@@ -295,7 +445,37 @@
     "tier_gold": "ذهبي",
     "tier_platinum": "بلاتيني",
     "debt": "دين",
-    "last_purchase": "آخر شراء"
+    "debts": "ديون",
+    "last_purchase": "آخر شراء",
+    "never": "أبداً",
+    "yesterday": "أمس",
+    "sort_name": "الاسم",
+    "sort_spent": "المصروفات",
+    "sort_recent": "الأحدث",
+    "sort_visits": "الزيارات",
+    "export_error": "تعذر تصدير العملاء",
+    "default_store": "متجري",
+    "report_title": "تقرير العملاء وإدارة العلاقات",
+    "report_clients": "العملاء",
+    "report_total_revenue": "الإيراد الإجمالي",
+    "report_debts": "الديون",
+    "client_list": "قائمة العملاء",
+    "col_name": "الاسم",
+    "col_phone": "الهاتف",
+    "col_tier": "المستوى",
+    "col_purchases": "المشتريات",
+    "col_total_revenue": "الإيراد الإجمالي",
+    "col_debt": "الدين",
+    "delete_client": "حذف العميل",
+    "delete_confirm": "هل تريد حقاً حذف هذا العميل؟",
+    "delete_promotion": "حذف العرض الترويجي",
+    "delete_promotion_confirm": "هل تريد حقاً حذف هذا العرض الترويجي؟",
+    "no_phone_in_tier": "لا يوجد عملاء بأرقام هواتف في هذه الفئة",
+    "campaign_sent": "تم إرسال الحملة",
+    "tab_info": "معلومات",
+    "tab_purchases": "مشتريات",
+    "tab_account": "الحساب",
+    "tab_contact": "تواصل"
   },
   "pos": {
     "title": "نقطة البيع",
@@ -308,7 +488,35 @@
     "mobile_money": "Mobile Money",
     "credit": "بيع بالائتمان",
     "insufficient_stock": "مخزون غير كافٍ",
-    "success": "تم تسجيل البيع"
+    "success": "تم تسجيل البيع",
+    "credit_success": "تم تسجيل البيع بالائتمان بنجاح.",
+    "sale_error": "تعذر تسجيل البيع",
+    "credit_select_client": "يرجى اختيار عميل للبيع بالائتمان.",
+    "credit_confirmation": "تأكيد الائتمان",
+    "stock_depleted": "المخزون نفد",
+    "sku_not_found": "لم يتم العثور على منتج بالرمز:",
+    "unknown": "مجهول",
+    "name_required": "الاسم مطلوب",
+    "client_created": "تم إنشاء العميل واختياره",
+    "client_create_error": "تعذر إنشاء العميل"
+  },
+  "alerts": {
+    "title": "التنبيهات",
+    "unread": "غير مقروءة",
+    "all_good": "كل شيء على ما يرام",
+    "no_alerts": "لا توجد تنبيهات",
+    "all_stocks_normal": "جميع مخزوناتك طبيعية",
+    "ai_anomaly_detection": "كشف الحالات الشاذة بالذكاء الاصطناعي",
+    "analysis_error": "تعذر تحليل الحالات الشاذة",
+    "rule_update_error": "تعذر تعديل القاعدة",
+    "threshold_update_error": "تعذر تعديل الحد",
+    "rule_low_stock": "مخزون منخفض",
+    "rule_out_of_stock": "نفاد المخزون",
+    "rule_overstock": "مخزون زائد",
+    "rule_dormant": "منتج خامل",
+    "severity_critical": "حرج",
+    "severity_warning": "تحذير",
+    "severity_info": "معلومات"
   },
   "supplier": {
     "dashboard": "لوحة المورد",
