--- a/frontend/locales/de.json
+++ b/frontend/locales/de.json
@@ -13,6 +13,14 @@
     "language_choice": "Sprache wählen",
     "items_count": "{{count}} Artikel",
     "my_shop": "Mein Laden",
+    "validate": "Bestätigen",
+    "add": "Hinzufügen",
+    "offline": "Offline",
+    "info": "Info",
+    "all": "Alle",
+    "none": "Keine",
+    "yes": "Ja",
+    "no": "Nein",
     "periods": {
       "7d": "7T",
       "30d": "30T",
@@ -21,8 +29,34 @@
       "custom": "Benutzerdefiniert",
       "from": "Von",
       "to": "bis",
-      "apply": "Anwenden"
+      "apply": "Anwenden",
+      "last_days": "Letzte {{count}} Tage"
     }
+  },
+  "tabs": {
+    "home": "Startseite",
+    "products": "Produkte",
+    "pos": "Kasse",
+    "accounting": "Buchh.",
+    "suppliers": "Liefer.",
+    "crm": "Kunden",
+    "orders": "Bestell.",
+    "alerts": "Alarme",
+    "settings": "Einstell.",
+    "users": "Benutzer",
+    "activity": "Aktivität",
+    "admin": "Admin",
+    "subscription": "Abonnement"
+  },
+  "store_selector": {
+    "my_stores": "Meine Läden",
+    "default_name": "Mein Laden",
+    "new_store": "Neuer Laden",
+    "store_name_placeholder": "Name des Ladens",
+    "create": "Erstellen",
+    "load_error": "Läden konnten nicht geladen werden",
+    "switch_error": "Laden konnte nicht gewechselt werden",
+    "create_error": "Laden konnte nicht erstellt werden"
   },
   "marketplace": {
     "title": "Marktplatz",
@@ -55,18 +89,37 @@
     "security": "Sicherheit",
     "about": "Über",
     "logout": "Abmelden",
+    "logout_confirm": "Möchten Sie sich wirklich abmelden?",
     "dark_mode": "Dunkelmodus",
+    "dark_mode_desc": "Zwischen hellem und dunklem Design wechseln",
     "simple_mode": "Einfacher Modus",
+    "simple_mode_desc": "Vereinfachte Oberfläche für Anfänger",
     "notifications": "Push-Benachrichtigungen",
+    "notifications_desc": "Bestandsalarme empfangen",
     "sync": "Synchronisierung",
     "team": "Teamverwaltung",
+    "team_title": "Teamverwaltung",
+    "users_permissions": "Benutzer & Berechtigungen",
+    "users_permissions_desc": "Verwalten Sie die Zugänge Ihrer Mitarbeiter",
     "modules": "Aktive Module",
     "reminders": "Erinnerungsregeln",
     "version": "Version",
     "language": "Sprache",
     "biometrics": "Biometrie (Face ID / Fingerabdruck)",
     "biometrics_desc": "Biometrische Erkennung verwenden",
-    "pin_required": "Aktivieren Sie zuerst den PIN-Code, um Biometrie zu nutzen."
+    "pin_required": "Aktivieren Sie zuerst den PIN-Code, um Biometrie zu nutzen.",
+    "change_password": "Passwort ändern",
+    "export_success": "Daten exportiert:",
+    "export_error": "Fehler beim Exportieren der Daten.",
+    "report_subject_required": "Bitte füllen Sie Betreff und Beschreibung aus.",
+    "report_sent": "Ihr Bericht wurde an den Administrator gesendet.",
+    "report_error": "Bericht konnte nicht gesendet werden.",
+    "module_stock": "Bestandsverwaltung",
+    "module_alerts": "Alarme",
+    "module_alert_rules": "Alarmregeln",
+    "module_stats": "Statistiken",
+    "module_history": "Verlauf",
+    "module_export": "Export"
   },
   "dashboard": {
     "title": "Dashboard",
@@ -86,7 +139,50 @@
     "stock_evolution": "Bestandswertentwicklung (7T)",
     "critical_products": "Kritische Produkte",
     "see_more": "Mehr anzeigen",
-    "see_less": "Weniger anzeigen"
+    "see_less": "Weniger anzeigen",
+    "recent_alerts": "Aktuelle Alarme",
+    "category_distribution": "Verteilung nach Kategorie",
+    "abc_analysis": "ABC-Analyse (Prioritäten)",
+    "class_a": "Klasse A",
+    "class_b": "Klasse B",
+    "class_c": "Klasse C",
+    "class_a_desc": "80% Ihres Umsatzes",
+    "class_b_desc": "15% Ihres Umsatzes",
+    "class_c_desc": "5% Ihres Umsatzes",
+    "smart_replenishment": "Intelligente Nachbestellung",
+    "threshold": "Schwelle",
+    "stock_label": "Bestand",
+    "order_btn": "Bestellen",
+    "rotating_inventory": "Rotierende Inventur",
+    "expected": "Erwartet",
+    "count_stock": "Bestand zählen",
+    "count_stock_prompt": "Geben Sie die tatsächliche Menge ein für",
+    "count_btn": "Zählen",
+    "generate_tasks": "Neue Aufgaben generieren",
+    "expiry_alerts": "Verfallsalarme (30T)",
+    "expired": "Abgelaufen!",
+    "statistics_btn": "Statistiken",
+    "history_btn": "Verlauf",
+    "movements_history": "Bewegungsverlauf",
+    "entries": "Eingänge",
+    "exits": "Ausgänge",
+    "no_movements": "Keine Bewegungen",
+    "default_user": "Händler",
+    "statistics": "Statistiken",
+    "movements_30d": "Bewegungen (30 Tage)",
+    "net": "Netto",
+    "stock_by_category": "Bestand nach Kategorie",
+    "status_distribution": "Statusverteilung",
+    "top_products_value": "Top-Produkte (Wert)",
+    "units": "Einheiten",
+    "orders_section": "Bestellungen",
+    "pending_orders": "Ausstehend",
+    "delivered_orders": "Geliefert",
+    "total_value": "Gesamtwert",
+    "admin_messages": "Nachrichten des Administrators",
+    "tip_of_day": "TIPP DES TAGES",
+    "see_feature": "Diese Funktion ansehen",
+    "preferences_error": "Ihre Einstellungen konnten nicht aktualisiert werden."
   },
   "products": {
     "title": "Produkte",
@@ -103,18 +199,61 @@
     "remove_stock": "-Bestand",
     "delete": "Lösch.",
     "all": "Alle",
-    "catalog": "Katalog"
+    "catalog": "Katalog",
+    "total_stock_value": "GESAMTER BESTANDSWERT",
+    "trend_forecast": "Trend / Prognose",
+    "stock_value": "Bestandswert",
+    "stock_label": "Bestand",
+    "unit_piece": "Stück",
+    "unit_pieces": "Stück",
+    "unit_units": "Einheit(en)",
+    "default_unit": "Stück",
+    "modify_btn": "Ändern",
+    "add_btn": "Hinzufügen",
+    "validate_btn": "Bestätigen",
+    "export_history_error": "Verlauf konnte nicht exportiert werden",
+    "export_products_error": "Produkte konnten nicht exportiert werden",
+    "ai_offline": "KI-Vorschläge erfordern eine Internetverbindung.",
+    "ai_category_error": "Kategorie konnte nicht vorgeschlagen werden",
+    "ai_price_info": "Preisvorschläge sind nur für bestehende Produkte verfügbar",
+    "ai_price_error": "Preis konnte nicht vorgeschlagen werden",
+    "ai_desc_error": "Beschreibung konnte nicht generiert werden",
+    "invalid_quantity": "Bitte geben Sie eine gültige Menge ein",
+    "stock_adjust_error": "Bestandsanpassung fehlgeschlagen",
+    "offline_saved": "Produkt lokal gespeichert. Es wird synchronisiert, wenn Sie online sind.",
+    "create_error": "Produkt konnte nicht erstellt/geändert werden",
+    "movements_offline": "Bestandsbewegungen sind offline nicht verfügbar.",
+    "stock_update_error": "Bestand konnte nicht aktualisiert werden",
+    "categories_offline": "Kategorieverwaltung ist offline nicht verfügbar.",
+    "category_save_error": "Kategorie konnte nicht gespeichert werden",
+    "import_offline": "Import erfordert eine Internetverbindung.",
+    "categories_imported": "Kategorien importiert",
+    "categories_exist": "Alle Kategorien sind bereits vorhanden.",
+    "import_error": "Beim Import ist ein Fehler aufgetreten.",
+    "pdf_headers": {
+      "product": "Produkt",
+      "category": "Kategorie",
+      "qty": "Menge",
+      "unit": "Einheit",
+      "purchase_price": "EK-Preis",
+      "selling_price": "VK-Preis",
+      "value": "Wert"
+    }
   },
   "accounting": {
     "title": "Buchhaltung",
     "revenue": "Umsatz",
     "sales_count": "Verkaufszahl",
+    "sales_count_value": "{{count}} Verkauf/Verkäufe",
     "avg_basket": "Durchschnittlicher Warenkorb",
     "total_expenses": "Gesamtausgaben",
     "expenses": "Ausgaben",
     "reports": "Berichte",
+    "report": "Bericht",
     "new_report": "Neuer Bericht",
     "add_expense": "Ausgabe erfassen",
+    "export_csv": "CSV exportieren",
+    "export_invoice": "Rechnung exportieren",
     "payment_methods": "Verkäufe nach Zahlungsmethode",
     "revenue_evolution": "Umsatzentwicklung",
     "daily": "Täglich",
@@ -162,6 +301,7 @@
     "delete_error": "Fehler beim Löschen",
     "confirm_expense": "Ausgabe von {{amount}} bestätigen?",
     "no_expenses": "Keine Ausgaben",
+    "expense_lines": "{{count}} Ausgabenzeile(n)",
     "expenses_categories": {
       "rent": "Miete",
       "salary": "Gehalt",
@@ -189,7 +329,13 @@
     "invoice_ref": "Ref",
     "invoice_date": "Datum",
     "payment_method_label": "Methode",
-    "notes_label": "Anmerkungen"
+    "notes_label": "Anmerkungen",
+    "default_store_name": "Mein Lager",
+    "default_address": "Adresse nicht angegeben",
+    "total_revenue_kpi": "Gesamtumsatz",
+    "gross_margin_kpi": "Bruttomarge",
+    "total_expenses_kpi": "Gesamtausgaben",
+    "report_generation_error": "Fehler bei der Berichtserstellung"
   },
   "orders": {
     "title": "Bestellungen",
@@ -281,11 +427,15 @@
   },
   "crm": {
     "title": "CRM & Treue",
+    "clients": "Kunden",
     "total_spent": "Gesamtverkäufe",
     "active_clients": "Aktiv (30T)",
     "loyalty_strategy": "Treueprogramm",
     "points": "Treuepunkte",
+    "points_desc": "Punktesammlung bei Verkäufen aktivieren",
     "reward_threshold": "Belohnungsschwelle",
+    "promotions": "Aktionen",
+    "create_promotion": "Aktion erstellen",
     "marketing": "Marketing",
     "whatsapp_campaign": "WhatsApp-Kampagne",
     "search_placeholder": "Kunden suchen...",
@@ -295,7 +445,37 @@
     "tier_gold": "Gold",
     "tier_platinum": "Platin",
     "debt": "Schulden",
-    "last_purchase": "Letzter Einkauf"
+    "debts": "Schulden",
+    "last_purchase": "Letzter Einkauf",
+    "never": "Nie",
+    "yesterday": "Gestern",
+    "sort_name": "Name",
+    "sort_spent": "Ausgaben",
+    "sort_recent": "Neueste",
+    "sort_visits": "Besuche",
+    "export_error": "Kunden konnten nicht exportiert werden",
+    "default_store": "Mein Geschäft",
+    "report_title": "KUNDEN- & CRM-BERICHT",
+    "report_clients": "Kunden",
+    "report_total_revenue": "Gesamtumsatz",
+    "report_debts": "Schulden",
+    "client_list": "Kundenliste",
+    "col_name": "Name",
+    "col_phone": "Telefon",
+    "col_tier": "Stufe",
+    "col_purchases": "Einkäufe",
+    "col_total_revenue": "Gesamtumsatz",
+    "col_debt": "Schulden",
+    "delete_client": "Kunde löschen",
+    "delete_confirm": "Möchten Sie diesen Kunden wirklich löschen?",
+    "delete_promotion": "Aktion löschen",
+    "delete_promotion_confirm": "Möchten Sie diese Aktion wirklich löschen?",
+    "no_phone_in_tier": "Kein Kunde mit Telefon in dieser Kategorie",
+    "campaign_sent": "Kampagne gesendet",
+    "tab_info": "Info",
+    "tab_purchases": "Einkäufe",
+    "tab_account": "Konto",
+    "tab_contact": "Kontakt"
   },
   "pos": {
     "title": "Kasse (POS)",
@@ -308,7 +488,35 @@
     "mobile_money": "Mobile Money",
     "credit": "Kreditverkauf",
     "insufficient_stock": "Unzureichender Bestand",
-    "success": "Verkauf erfasst"
+    "success": "Verkauf erfasst",
+    "credit_success": "Kreditverkauf erfolgreich erfasst.",
+    "sale_error": "Verkauf konnte nicht erfasst werden",
+    "credit_select_client": "Bitte wählen Sie einen Kunden für den Kreditverkauf.",
+    "credit_confirmation": "Kreditbestätigung",
+    "stock_depleted": "Bestand erschöpft",
+    "sku_not_found": "Kein Produkt mit dieser SKU gefunden:",
+    "unknown": "Unbekannt",
+    "name_required": "Der Name ist erforderlich",
+    "client_created": "Kunde erstellt und ausgewählt",
+    "client_create_error": "Kunde konnte nicht erstellt werden"
+  },
+  "alerts": {
+    "title": "Alarme",
+    "unread": "ungelesen",
+    "all_good": "Alles in Ordnung",
+    "no_alerts": "Keine Alarme",
+    "all_stocks_normal": "Alle Ihre Bestände sind normal",
+    "ai_anomaly_detection": "KI-Anomalieerkennung",
+    "analysis_error": "Anomalien konnten nicht analysiert werden",
+    "rule_update_error": "Regel konnte nicht geändert werden",
+    "threshold_update_error": "Schwellenwert konnte nicht geändert werden",
+    "rule_low_stock": "Niedriger Bestand",
+    "rule_out_of_stock": "Ausverkauft",
+    "rule_overstock": "Überbestand",
+    "rule_dormant": "Ruhendes Produkt",
+    "severity_critical": "Kritisch",
+    "severity_warning": "Warnung",
+    "severity_info": "Info"
   },
   "supplier": {
     "dashboard": "Lieferanten-Dashboard",
