--- a/frontend/locales/es.json
+++ b/frontend/locales/es.json
@@ -13,6 +13,14 @@
     "language_choice": "Elegir idioma",
     "items_count": "{{count}} artículo(s)",
     "my_shop": "Mi Tienda",
+    "validate": "Validar",
+    "add": "Añadir",
+    "offline": "Sin conexión",
+    "info": "Info",
+    "all": "Todos",
+    "none": "Ninguno",
+    "yes": "Sí",
+    "no": "No",
     "periods": {
       "7d": "7d",
       "30d": "30d",
@@ -21,8 +29,34 @@
       "custom": "Personalizado",
       "from": "Desde",
       "to": "hasta",
-      "apply": "Aplicar"
+      "apply": "Aplicar",
+      "last_days": "Últimos {{count}} días"
     }
+  },
+  "tabs": {
+    "home": "Inicio",
+    "products": "Productos",
+    "pos": "Caja",
+    "accounting": "Contab.",
+    "suppliers": "Proveed.",
+    "crm": "Clientes",
+    "orders": "Pedidos",
+    "alerts": "Alertas",
+    "settings": "Ajustes",
+    "users": "Usuarios",
+    "activity": "Actividad",
+    "admin": "Admin",
+    "subscription": "Suscripción"
+  },
+  "store_selector": {
+    "my_stores": "Mis Tiendas",
+    "default_name": "Mi Tienda",
+    "new_store": "Nueva tienda",
+    "store_name_placeholder": "Nombre de la tienda",
+    "create": "Crear",
+    "load_error": "No se pudieron cargar las tiendas",
+    "switch_error": "No se pudo cambiar de tienda",
+    "create_error": "No se pudo crear la tienda"
   },
   "marketplace": {
     "title": "Mercado",
@@ -55,18 +89,37 @@
     "security": "Seguridad",
     "about": "Acerca de",
     "logout": "Cerrar sesión",
+    "logout_confirm": "¿Desea realmente cerrar sesión?",
     "dark_mode": "Modo Noche",
+    "dark_mode_desc": "Alternar entre tema claro y oscuro",
     "simple_mode": "Modo Simple",
+    "simple_mode_desc": "Interfaz simplificada para principiantes",
     "notifications": "Notificaciones Push",
+    "notifications_desc": "Recibir alertas de stock",
     "sync": "Sincronización",
     "team": "Gestión de Equipo",
+    "team_title": "Gestión de Equipo",
+    "users_permissions": "Usuarios y Permisos",
+    "users_permissions_desc": "Gestione los accesos de sus empleados",
     "modules": "Módulos Activos",
     "reminders": "Reglas de Recordatorio",
     "version": "Versión",
     "language": "Idioma",
     "biometrics": "Biometría",
     "biometrics_desc": "Utilizar reconocimiento biométrico",
-    "pin_required": "Activa primero el código PIN para usar la biometría."
+    "pin_required": "Activa primero el código PIN para usar la biometría.",
+    "change_password": "Cambiar contraseña",
+    "export_success": "Datos exportados:",
+    "export_error": "Error al exportar los datos.",
+    "report_subject_required": "Por favor complete el asunto y la descripción.",
+    "report_sent": "Su informe ha sido enviado al administrador.",
+    "report_error": "No se pudo enviar el informe.",
+    "module_stock": "Gestión de stock",
+    "module_alerts": "Alertas",
+    "module_alert_rules": "Reglas de alerta",
+    "module_stats": "Estadísticas",
+    "module_history": "Historial",
+    "module_export": "Exportar"
   },
   "dashboard": {
     "title": "Panel de control",
@@ -86,7 +139,50 @@
     "stock_evolution": "Evolución Valor Stock (7d)",
     "critical_products": "Productos críticos",
     "see_more": "Ver más",
-    "see_less": "Ver menos"
+    "see_less": "Ver menos",
+    "recent_alerts": "Alertas recientes",
+    "category_distribution": "Distribución por Categoría",
+    "abc_analysis": "Análisis ABC (Prioridades)",
+    "class_a": "Clase A",
+    "class_b": "Clase B",
+    "class_c": "Clase C",
+    "class_a_desc": "80% de su facturación",
+    "class_b_desc": "15% de su facturación",
+    "class_c_desc": "5% de su facturación",
+    "smart_replenishment": "Reabastecimiento Inteligente",
+    "threshold": "Umbral",
+    "stock_label": "Stock",
+    "order_btn": "Pedir",
+    "rotating_inventory": "Inventario Rotativo",
+    "expected": "Esperado",
+    "count_stock": "Contar el stock",
+    "count_stock_prompt": "Introduzca la cantidad real para",
+    "count_btn": "Contar",
+    "generate_tasks": "Generar nuevas tareas",
+    "expiry_alerts": "Alertas de Caducidad (30d)",
+    "expired": "¡Caducado!",
+    "statistics_btn": "Estadísticas",
+    "history_btn": "Historial",
+    "movements_history": "Historial de movimientos",
+    "entries": "Entradas",
+    "exits": "Salidas",
+    "no_movements": "Sin movimientos",
+    "default_user": "Comerciante",
+    "statistics": "Estadísticas",
+    "movements_30d": "Movimientos (30 días)",
+    "net": "Neto",
+    "stock_by_category": "Stock por categoría",
+    "status_distribution": "Distribución de estados",
+    "top_products_value": "Top productos (valor)",
+    "units": "unidades",
+    "orders_section": "Pedidos",
+    "pending_orders": "Pendientes",
+    "delivered_orders": "Entregados",
+    "total_value": "Valor total",
+    "admin_messages": "Mensajes del administrador",
+    "tip_of_day": "CONSEJO DEL DÍA",
+    "see_feature": "Ver esta funcionalidad",
+    "preferences_error": "No se pudieron actualizar sus preferencias."
   },
   "products": {
     "title": "Productos",
@@ -103,18 +199,61 @@
     "remove_stock": "-Stock",
     "delete": "Elim.",
     "all": "Todo",
-    "catalog": "Catálogo"
+    "catalog": "Catálogo",
+    "total_stock_value": "VALOR TOTAL DEL STOCK",
+    "trend_forecast": "Tendencia / Previsión",
+    "stock_value": "Valor del Stock",
+    "stock_label": "Stock",
+    "unit_piece": "Pieza",
+    "unit_pieces": "Pieza(s)",
+    "unit_units": "unidad(es)",
+    "default_unit": "Pieza",
+    "modify_btn": "Modificar",
+    "add_btn": "Añadir",
+    "validate_btn": "Validar",
+    "export_history_error": "No se pudo exportar el historial",
+    "export_products_error": "No se pudieron exportar los productos",
+    "ai_offline": "La sugerencia IA requiere conexión a internet.",
+    "ai_category_error": "No se pudo sugerir una categoría",
+    "ai_price_info": "La sugerencia de precio solo está disponible para productos existentes",
+    "ai_price_error": "No se pudo sugerir un precio",
+    "ai_desc_error": "No se pudo generar la descripción",
+    "invalid_quantity": "Por favor introduzca una cantidad válida",
+    "stock_adjust_error": "Error al ajustar el stock",
+    "offline_saved": "Producto guardado localmente. Se sincronizará cuando esté en línea.",
+    "create_error": "No se pudo crear/modificar el producto",
+    "movements_offline": "Los movimientos de stock no están disponibles sin conexión.",
+    "stock_update_error": "No se pudo actualizar el stock",
+    "categories_offline": "La gestión de categorías no está disponible sin conexión.",
+    "category_save_error": "No se pudo guardar la categoría",
+    "import_offline": "La importación requiere conexión a internet.",
+    "categories_imported": "categorías importadas",
+    "categories_exist": "Todas las categorías ya existen.",
+    "import_error": "Ocurrió un error durante la importación.",
+    "pdf_headers": {
+      "product": "Producto",
+      "category": "Categoría",
+      "qty": "Cant.",
+      "unit": "Unidad",
+      "purchase_price": "P. Compra",
+      "selling_price": "P. Venta",
+      "value": "Valor"
+    }
   },
   "accounting": {
     "title": "Contabilidad",
     "revenue": "Facturación",
     "sales_count": "Ventas realizadas",
+    "sales_count_value": "{{count}} venta(s)",
     "avg_basket": "Cesta Promedio",
     "total_expenses": "Total Gastos",
     "expenses": "Gastos",
     "reports": "Informes",
+    "report": "Informe",
     "new_report": "Nuevo Informe",
     "add_expense": "Registrar Gasto",
+    "export_csv": "Exportar CSV",
+    "export_invoice": "Exportar Factura",
     "payment_methods": "Ventas por método de pago",
     "revenue_evolution": "Evolución de ingresos",
     "daily": "Diario",
@@ -162,6 +301,7 @@
     "delete_error": "Error al eliminar",
     "confirm_expense": "¿Confirmar gasto de {{amount}}?",
     "no_expenses": "Sin gastos",
+    "expense_lines": "{{count}} línea(s) de gasto",
     "expenses_categories": {
       "rent": "Alquiler",
       "salary": "Salario",
@@ -189,7 +329,13 @@
     "invoice_ref": "Ref",
     "invoice_date": "Fecha",
     "payment_method_label": "Método",
-    "notes_label": "Notas"
+    "notes_label": "Notas",
+    "default_store_name": "Mi Tienda Stock",
+    "default_address": "Dirección no indicada",
+    "total_revenue_kpi": "Ingresos totales",
+    "gross_margin_kpi": "Margen bruto",
+    "total_expenses_kpi": "Total gastos",
+    "report_generation_error": "Error al generar el informe"
   },
   "orders": {
     "title": "Pedidos",
@@ -281,11 +427,15 @@
   },
   "crm": {
     "title": "CRM y Fidelidad",
+    "clients": "Clientes",
     "total_spent": "Ventas totales",
     "active_clients": "Activos (30d)",
     "loyalty_strategy": "Estrategia de Fidelización",
     "points": "Puntos de fidelidad",
+    "points_desc": "Activar la acumulación de puntos en las ventas",
     "reward_threshold": "Umbral de recompensa",
+    "promotions": "Promociones",
+    "create_promotion": "Crear una promoción",
     "marketing": "Marketing",
     "whatsapp_campaign": "Campaña WhatsApp",
     "search_placeholder": "Buscar cliente...",
@@ -295,7 +445,37 @@
     "tier_gold": "Oro",
     "tier_platinum": "Platino",
     "debt": "Deuda",
-    "last_purchase": "Última compra"
+    "debts": "Deudas",
+    "last_purchase": "Última compra",
+    "never": "Nunca",
+    "yesterday": "Ayer",
+    "sort_name": "Nombre",
+    "sort_spent": "Gastos",
+    "sort_recent": "Reciente",
+    "sort_visits": "Visitas",
+    "export_error": "No se pudieron exportar los clientes",
+    "default_store": "Mi Comercio",
+    "report_title": "INFORME DE CLIENTES Y CRM",
+    "report_clients": "Clientes",
+    "report_total_revenue": "Ingresos totales",
+    "report_debts": "Deudas",
+    "client_list": "Lista de clientes",
+    "col_name": "Nombre",
+    "col_phone": "Teléfono",
+    "col_tier": "Nivel",
+    "col_purchases": "Compras",
+    "col_total_revenue": "Ingresos totales",
+    "col_debt": "Deuda",
+    "delete_client": "Eliminar cliente",
+    "delete_confirm": "¿Desea realmente eliminar este cliente?",
+    "delete_promotion": "Eliminar promoción",
+    "delete_promotion_confirm": "¿Desea realmente eliminar esta promoción?",
+    "no_phone_in_tier": "Ningún cliente con teléfono en esta categoría",
+    "campaign_sent": "Campaña enviada",
+    "tab_info": "Info",
+    "tab_purchases": "Compras",
+    "tab_account": "Cuenta",
+    "tab_contact": "Contacto"
   },
   "pos": {
     "title": "Punto de Venta",
@@ -308,7 +488,35 @@
     "mobile_money": "Mobile Money",
     "credit": "Venta a crédito",
     "insufficient_stock": "Stock insuficiente",
-    "success": "Venta registrada"
+    "success": "Venta registrada",
+    "credit_success": "Venta a crédito registrada con éxito.",
+    "sale_error": "No se pudo registrar la venta",
+    "credit_select_client": "Seleccione un cliente para la venta a crédito.",
+    "credit_confirmation": "Confirmación de Crédito",
+    "stock_depleted": "Stock agotado",
+    "sku_not_found": "Ningún producto encontrado con el SKU:",
+    "unknown": "Desconocido",
+    "name_required": "El nombre es obligatorio",
+    "client_created": "Cliente creado y seleccionado",
+    "client_create_error": "No se pudo crear el cliente"
+  },
+  "alerts": {
+    "title": "Alertas",
+    "unread": "no leída(s)",
+    "all_good": "Todo en orden",
+    "no_alerts": "Sin alertas",
+    "all_stocks_normal": "Todos sus stocks están normales",
+    "ai_anomaly_detection": "Detección de anomalías IA",
+    "analysis_error": "No se pudieron analizar las anomalías",
+    "rule_update_error": "No se pudo modificar la regla",
+    "threshold_update_error": "No se pudo modificar el umbral",
+    "rule_low_stock": "Stock bajo",
+    "rule_out_of_stock": "Rotura de stock",
+    "rule_overstock": "Exceso de stock",
+    "rule_dormant": "Producto inactivo",
+    "severity_critical": "Crítico",
+    "severity_warning": "Atención",
+    "severity_info": "Info"
   },
   "supplier": {
     "dashboard": "Panel del Proveedor",
