--- a/frontend/locales/fr.json
+++ b/frontend/locales/fr.json
@@ -13,6 +13,14 @@
     "language_choice": "Choisir la langue",
     "items_count": "{{count}} article(s)",
     "my_shop": "Ma Boutique",
+    "validate": "Valider",
+    "add": "Ajouter",
+    "offline": "Hors ligne",
+    "info": "Info",
+    "all": "Tous",
+    "none": "Aucun",
+    "yes": "Oui",
+    "no": "Non",
     "periods": {
       "7d": "7j",
       "30d": "30j",
@@ -21,8 +29,34 @@
       "custom": "Personnalisé",
       "from": "Du",
       "to": "au",
-      "apply": "Appliquer"
+      "apply": "Appliquer",
+      "last_days": "Derniers {{count}} jours"
     }
+  },
+  "tabs": {
+    "home": "Accueil",
+    "products": "Produits",
+    "pos": "Caisse",
+    "accounting": "Compta",
+    "suppliers": "Fourn.",
+    "crm": "Clients",
+    "orders": "Cmd",
+    "alerts": "Alertes",
+    "settings": "Réglages",
+    "users": "Utilisateurs",
+    "activity": "Activité",
+    "admin": "Admin",
+    "subscription": "Abonnement"
+  },
+  "store_selector": {
+    "my_stores": "Mes Magasins",
+    "default_name": "Mon Magasin",
+    "new_store": "Nouveau magasin",
+    "store_name_placeholder": "Nom du magasin",
+    "create": "Créer",
+    "load_error": "Impossible de charger les magasins",
+    "switch_error": "Impossible de changer de magasin",
+    "create_error": "Impossible de créer le magasin"
   },
   "marketplace": {
     "title": "Marketplace",
@@ -55,18 +89,37 @@
     "security": "Sécurité",
     "about": "À propos",
     "logout": "Se déconnecter",
+    "logout_confirm": "Voulez-vous vraiment vous déconnecter ?",
     "dark_mode": "Mode Sombre",
+    "dark_mode_desc": "Basculer entre thème clair et sombre",
     "simple_mode": "Mode Simplifié",
+    "simple_mode_desc": "Interface allégée pour débutants",
     "notifications": "Notifications Push",
+    "notifications_desc": "Recevoir les alertes de stock",
     "sync": "Synchronisation",
     "team": "Gestion d'Équipe",
+    "team_title": "Gestion d'Équipe",
+    "users_permissions": "Utilisateurs & Permissions",
+    "users_permissions_desc": "Gérez les accès de vos employés",
     "modules": "Modules Actifs",
     "reminders": "Règles des Rappels",
     "version": "Version",
     "language": "Langue",
     "biometrics": "Biométrie (Face ID / Empreinte)",
     "biometrics_desc": "Utiliser la reconnaissance biométrique",
-    "pin_required": "Activez d'abord le code PIN pour utiliser la biométrie."
+    "pin_required": "Activez d'abord le code PIN pour utiliser la biométrie.",
+    "change_password": "Changer le mot de passe",
+    "export_success": "Données exportées :",
+    "export_error": "Echec de l'export des données.",
+    "report_subject_required": "Veuillez remplir le sujet et la description.",
+    "report_sent": "Votre signalement a été envoyé à l'administrateur.",
+    "report_error": "Impossible d'envoyer le signalement.",
+    "module_stock": "Gestion de stock",
+    "module_alerts": "Alertes",
+    "module_alert_rules": "Règles d'alerte",
+    "module_stats": "Statistiques",
+    "module_history": "Historique",
+    "module_export": "Export"
   },
   "dashboard": {
     "title": "Tableau de bord",
@@ -86,7 +139,50 @@
     "stock_evolution": "Evolution Valeur Stock (7j)",
     "critical_products": "Produits critiques",
     "see_more": "Voir plus",
-    "see_less": "Voir moins"
+    "see_less": "Voir moins",
+    "recent_alerts": "Alertes récentes",
+    "category_distribution": "Répartition par Catégorie",
+    "abc_analysis": "Analyse ABC (Priorités)",
+    "class_a": "Classe A",
+    "class_b": "Classe B",
+    "class_c": "Classe C",
+    "class_a_desc": "80% de votre CA",
+    "class_b_desc": "15% de votre CA",
+    "class_c_desc": "5% de votre CA",
+    "smart_replenishment": "Réapprovisionnement Intelligent",
+    "threshold": "Seuil",
+    "stock_label": "Stock",
+    "order_btn": "Commander",
+    "rotating_inventory": "Inventaire Tournant",
+    "expected": "Attendu",
+    "count_stock": "Compter le stock",
+    "count_stock_prompt": "Entrez la quantité réelle pour",
+    "count_btn": "Compter",
+    "generate_tasks": "Générer de nouvelles tâches",
+    "expiry_alerts": "Alertes Péremption (30j)",
+    "expired": "Périmé !",
+    "statistics_btn": "Statistiques",
+    "history_btn": "Historique",
+    "movements_history": "Historique des mouvements",
+    "entries": "Entrées",
+    "exits": "Sorties",
+    "no_movements": "Aucun mouvement",
+    "default_user": "Commerçant",
+    "statistics": "Statistiques",
+    "movements_30d": "Mouvements (30 jours)",
+    "net": "Net",
+    "stock_by_category": "Stock par catégorie",
+    "status_distribution": "Distribution des statuts",
+    "top_products_value": "Top produits (valeur)",
+    "units": "unités",
+    "orders_section": "Commandes",
+    "pending_orders": "En attente",
+    "delivered_orders": "Livrées",
+    "total_value": "Valeur totale",
+    "admin_messages": "Messages de l'administrateur",
+    "tip_of_day": "ASTUCE DU JOUR",
+    "see_feature": "Voir cette fonctionnalité",
+    "preferences_error": "Impossible de mettre à jour vos préférences."
   },
   "products": {
     "title": "Produits",
@@ -103,18 +199,61 @@
     "remove_stock": "-Stock",
     "delete": "Suppr.",
     "all": "Tout",
-    "catalog": "Catalogue"
+    "catalog": "Catalogue",
+    "total_stock_value": "VALEUR TOTALE DU STOCK",
+    "trend_forecast": "Tendance / Prévision",
+    "stock_value": "Valeur Stock",
+    "stock_label": "Stock",
+    "unit_piece": "Pièce",
+    "unit_pieces": "Pièce(s)",
+    "unit_units": "unité(s)",
+    "default_unit": "Pièce",
+    "modify_btn": "Modifier",
+    "add_btn": "Ajouter",
+    "validate_btn": "Valider",
+    "export_history_error": "Impossible d'exporter l'historique",
+    "export_products_error": "Impossible d'exporter les produits",
+    "ai_offline": "La suggestion IA nécessite une connexion internet.",
+    "ai_category_error": "Impossible de suggérer une catégorie",
+    "ai_price_info": "La suggestion de prix est disponible uniquement pour les produits existants",
+    "ai_price_error": "Impossible de suggérer un prix",
+    "ai_desc_error": "Impossible de générer la description",
+    "invalid_quantity": "Veuillez entrer une quantité valide",
+    "stock_adjust_error": "Échec de l'ajustement du stock",
+    "offline_saved": "Produit sauvegardé localement. Il sera synchronisé quand vous serez en ligne.",
+    "create_error": "Impossible de créer/modifier le produit",
+    "movements_offline": "Les mouvements de stock ne sont pas disponibles hors ligne.",
+    "stock_update_error": "Impossible de mettre à jour le stock",
+    "categories_offline": "La gestion des catégories est indisponible hors ligne.",
+    "category_save_error": "Impossible de sauvegarder la catégorie",
+    "import_offline": "L'importation nécessite une connexion internet.",
+    "categories_imported": "catégories importées",
+    "categories_exist": "Toutes les catégories existent déjà.",
+    "import_error": "Une erreur est survenue lors de l'import.",
+    "pdf_headers": {
+      "product": "Produit",
+      "category": "Catégorie",
+      "qty": "Qté",
+      "unit": "Unité",
+      "purchase_price": "P. Achat",
+      "selling_price": "P. Vente",
+      "value": "Valeur"
+    }
   },
   "accounting": {
     "title": "Comptabilité",
     "revenue": "Chiffre d'Affaires",
     "sales_count": "Ventes réalisées",
+    "sales_count_value": "{{count}} vente(s)",
     "avg_basket": "Panier Moyen",
     "total_expenses": "Total Charges",
     "expenses": "Charges",
     "reports": "Rapports",
+    "report": "Rapport",
     "new_report": "Nouveau Rapport",
     "add_expense": "Enregistrer Charge",
+    "export_csv": "Exporter CSV",
+    "export_invoice": "Exporter Facture",
     "payment_methods": "Ventes par mode de paiement",
     "revenue_evolution": "Évolution des revenus",
     "daily": "Journalier",
@@ -162,6 +301,7 @@
     "delete_error": "Erreur lors de la suppression",
     "confirm_expense": "Confirmer la dépense de {{amount}} ?",
     "no_expenses": "Aucune dépense",
+    "expense_lines": "{{count}} ligne(s) de dépense",
     "expenses_categories": {
       "rent": "Loyer",
       "salary": "Salaire",
@@ -189,7 +329,13 @@
     "invoice_ref": "Réf",
     "invoice_date": "Date",
     "payment_method_label": "Méthode",
-    "notes_label": "Notes"
+    "notes_label": "Notes",
+    "default_store_name": "Ma Boutique Stock",
+    "default_address": "Adresse non renseignée",
+    "total_revenue_kpi": "CA total",
+    "gross_margin_kpi": "Marge brute",
+    "total_expenses_kpi": "Total charges",
+    "report_generation_error": "Erreur lors de la génération du rapport"
   },
   "orders": {
     "title": "Commandes",
@@ -281,11 +427,15 @@
   },
   "crm": {
     "title": "CRM & Fidélité",
+    "clients": "Clients",
     "total_spent": "Ventes totales",
     "active_clients": "Actifs (30j)",
     "loyalty_strategy": "Stratégie de Fidélité",
     "points": "Points de fidélité",
+    "points_desc": "Activer le cumul de points lors des ventes",
     "reward_threshold": "Récompense à",
+    "promotions": "Promotions",
+    "create_promotion": "Créer une promotion",
     "marketing": "Marketing",
     "whatsapp_campaign": "Campagne WhatsApp",
     "search_placeholder": "Rechercher un client...",
@@ -295,7 +445,37 @@
     "tier_gold": "Or",
     "tier_platinum": "Platine",
     "debt": "Dette",
-    "last_purchase": "Dernier achat"
+    "debts": "Dettes",
+    "last_purchase": "Dernier achat",
+    "never": "Jamais",
+    "yesterday": "Hier",
+    "sort_name": "Nom",
+    "sort_spent": "Dépenses",
+    "sort_recent": "Récent",
+    "sort_visits": "Visites",
+    "export_error": "Impossible d'exporter les clients",
+    "default_store": "Mon Commerce",
+    "report_title": "RAPPORT CLIENTS & CRM",
+    "report_clients": "Clients",
+    "report_total_revenue": "CA total",
+    "report_debts": "Dettes",
+    "client_list": "Liste des clients",
+    "col_name": "Nom",
+    "col_phone": "Téléphone",
+    "col_tier": "Tier",
+    "col_purchases": "Achats",
+    "col_total_revenue": "CA total",
+    "col_debt": "Dette",
+    "delete_client": "Supprimer le client",
+    "delete_confirm": "Voulez-vous vraiment supprimer ce client ?",
+    "delete_promotion": "Supprimer la promotion",
+    "delete_promotion_confirm": "Voulez-vous vraiment supprimer cette promotion ?",
+    "no_phone_in_tier": "Aucun client avec téléphone dans cette catégorie",
+    "campaign_sent": "Campagne envoyée",
+    "tab_info": "Infos",
+    "tab_purchases": "Achats",
+    "tab_account": "Compte",
+    "tab_contact": "Contact"
   },
   "pos": {
     "title": "Caisse (POS)",
@@ -308,7 +488,35 @@
     "mobile_money": "Mobile Money",
     "credit": "Vente à crédit",
     "insufficient_stock": "Stock insuffisant",
-    "success": "Vente enregistrée"
+    "success": "Vente enregistrée",
+    "credit_success": "Vente à crédit enregistrée avec succès.",
+    "sale_error": "Impossible d'enregistrer la vente",
+    "credit_select_client": "Veuillez sélectionner un client pour une vente à crédit.",
+    "credit_confirmation": "Confirmation Crédit",
+    "stock_depleted": "Stock épuisé",
+    "sku_not_found": "Aucun produit trouvé avec le SKU:",
+    "unknown": "Inconnu",
+    "name_required": "Le nom est obligatoire",
+    "client_created": "Client créé et sélectionné",
+    "client_create_error": "Impossible de créer le client"
+  },
+  "alerts": {
+    "title": "Alertes",
+    "unread": "non lue(s)",
+    "all_good": "Tout est en ordre",
+    "no_alerts": "Aucune alerte",
+    "all_stocks_normal": "Tous vos stocks sont normaux",
+    "ai_anomaly_detection": "Détection d'anomalies IA",
+    "analysis_error": "Impossible d'analyser les anomalies",
+    "rule_update_error": "Impossible de modifier la règle",
+    "threshold_update_error": "Impossible de modifier le seuil",
+    "rule_low_stock": "Stock bas",
+    "rule_out_of_stock": "Rupture de stock",
+    "rule_overstock": "Surstock",
+    "rule_dormant": "Produit dormant",
+    "severity_critical": "Critique",
+    "severity_warning": "Attention",
+    "severity_info": "Info"
   },
   "supplier": {
     "dashboard": "Dashboard Fournisseur",
