--- a/frontend/locales/it.json
+++ b/frontend/locales/it.json
@@ -13,6 +13,14 @@
     "language_choice": "Scegli la lingua",
     "items_count": "{{count}} articolo/i",
     "my_shop": "Il mio Negozio",
+    "validate": "Convalida",
+    "add": "Aggiungi",
+    "offline": "Offline",
+    "info": "Info",
+    "all": "Tutti",
+    "none": "Nessuno",
+    "yes": "Sì",
+    "no": "No",
     "periods": {
       "7d": "7g",
       "30d": "30g",
@@ -21,8 +29,34 @@
       "custom": "Personalizzato",
       "from": "Dal",
       "to": "al",
-      "apply": "Applica"
+      "apply": "Applica",
+      "last_days": "Ultimi {{count}} giorni"
     }
+  },
+  "tabs": {
+    "home": "Home",
+    "products": "Prodotti",
+    "pos": "Cassa",
+    "accounting": "Contab.",
+    "suppliers": "Fornit.",
+    "crm": "Clienti",
+    "orders": "Ordini",
+    "alerts": "Avvisi",
+    "settings": "Impost.",
+    "users": "Utenti",
+    "activity": "Attività",
+    "admin": "Admin",
+    "subscription": "Abbonamento"
+  },
+  "store_selector": {
+    "my_stores": "I miei Negozi",
+    "default_name": "Il mio Negozio",
+    "new_store": "Nuovo negozio",
+    "store_name_placeholder": "Nome del negozio",
+    "create": "Crea",
+    "load_error": "Impossibile caricare i negozi",
+    "switch_error": "Impossibile cambiare negozio",
+    "create_error": "Impossibile creare il negozio"
   },
   "marketplace": {
     "title": "Marketplace",
@@ -55,18 +89,37 @@
     "security": "Sicurezza",
     "about": "Informazioni",
     "logout": "Disconnetti",
+    "logout_confirm": "Vuoi davvero disconnetterti?",
     "dark_mode": "Modalità scura",
+    "dark_mode_desc": "Alterna tra tema chiaro e scuro",
     "simple_mode": "Modalità semplice",
+    "simple_mode_desc": "Interfaccia semplificata per principianti",
     "notifications": "Notifiche push",
+    "notifications_desc": "Ricevere avvisi di scorte",
     "sync": "Sincronizzazione",
     "team": "Gestione team",
+    "team_title": "Gestione team",
+    "users_permissions": "Utenti e Permessi",
+    "users_permissions_desc": "Gestisci gli accessi dei tuoi dipendenti",
     "modules": "Moduli attivi",
     "reminders": "Regole promemoria",
     "version": "Versione",
     "language": "Lingua",
     "biometrics": "Biometria (Face ID / Impronta)",
     "biometrics_desc": "Usa il riconoscimento biometrico",
-    "pin_required": "Attiva prima il codice PIN per usare la biometria."
+    "pin_required": "Attiva prima il codice PIN per usare la biometria.",
+    "change_password": "Cambia password",
+    "export_success": "Dati esportati:",
+    "export_error": "Errore durante l'esportazione dei dati.",
+    "report_subject_required": "Compila l'oggetto e la descrizione.",
+    "report_sent": "La segnalazione è stata inviata all'amministratore.",
+    "report_error": "Impossibile inviare la segnalazione.",
+    "module_stock": "Gestione scorte",
+    "module_alerts": "Avvisi",
+    "module_alert_rules": "Regole di avviso",
+    "module_stats": "Statistiche",
+    "module_history": "Storico",
+    "module_export": "Esporta"
   },
   "dashboard": {
     "title": "Dashboard",
@@ -86,7 +139,50 @@
     "stock_evolution": "Evoluzione valore scorte (7g)",
     "critical_products": "Prodotti critici",
     "see_more": "Vedi di più",
-    "see_less": "Vedi meno"
+    "see_less": "Vedi meno",
+    "recent_alerts": "Avvisi recenti",
+    "category_distribution": "Distribuzione per Categoria",
+    "abc_analysis": "Analisi ABC (Priorità)",
+    "class_a": "Classe A",
+    "class_b": "Classe B",
+    "class_c": "Classe C",
+    "class_a_desc": "80% del tuo fatturato",
+    "class_b_desc": "15% del tuo fatturato",
+    "class_c_desc": "5% del tuo fatturato",
+    "smart_replenishment": "Rifornimento Intelligente",
+    "threshold": "Soglia",
+    "stock_label": "Scorte",
+    "order_btn": "Ordina",
+    "rotating_inventory": "Inventario a Rotazione",
+    "expected": "Atteso",
+    "count_stock": "Conta le scorte",
+    "count_stock_prompt": "Inserisci la quantità reale per",
+    "count_btn": "Conta",
+    "generate_tasks": "Genera nuove attività",
+    "expiry_alerts": "Avvisi Scadenza (30g)",
+    "expired": "Scaduto!",
+    "statistics_btn": "Statistiche",
+    "history_btn": "Storico",
+    "movements_history": "Storico dei movimenti",
+    "entries": "Entrate",
+    "exits": "Uscite",
+    "no_movements": "Nessun movimento",
+    "default_user": "Commerciante",
+    "statistics": "Statistiche",
+    "movements_30d": "Movimenti (30 giorni)",
+    "net": "Netto",
+    "stock_by_category": "Scorte per categoria",
+    "status_distribution": "Distribuzione degli stati",
+    "top_products_value": "Top prodotti (valore)",
+    "units": "unità",
+    "orders_section": "Ordini",
+    "pending_orders": "In attesa",
+    "delivered_orders": "Consegnati",
+    "total_value": "Valore totale",
+    "admin_messages": "Messaggi dell'amministratore",
+    "tip_of_day": "CONSIGLIO DEL GIORNO",
+    "see_feature": "Vedi questa funzionalità",
+    "preferences_error": "Impossibile aggiornare le tue preferenze."
   },
   "products": {
     "title": "Prodotti",
@@ -103,18 +199,61 @@
     "remove_stock": "-Scorte",
     "delete": "Elim.",
     "all": "Tutti",
-    "catalog": "Catalogo"
+    "catalog": "Catalogo",
+    "total_stock_value": "VALORE TOTALE DELLE SCORTE",
+    "trend_forecast": "Tendenza / Previsione",
+    "stock_value": "Valore Scorte",
+    "stock_label": "Scorte",
+    "unit_piece": "Pezzo",
+    "unit_pieces": "Pezzo/i",
+    "unit_units": "unità",
+    "default_unit": "Pezzo",
+    "modify_btn": "Modifica",
+    "add_btn": "Aggiungi",
+    "validate_btn": "Convalida",
+    "export_history_error": "Impossibile esportare lo storico",
+    "export_products_error": "Impossibile esportare i prodotti",
+    "ai_offline": "Il suggerimento IA richiede una connessione internet.",
+    "ai_category_error": "Impossibile suggerire una categoria",
+    "ai_price_info": "Il suggerimento prezzo è disponibile solo per prodotti esistenti",
+    "ai_price_error": "Impossibile suggerire un prezzo",
+    "ai_desc_error": "Impossibile generare la descrizione",
+    "invalid_quantity": "Inserisci una quantità valida",
+    "stock_adjust_error": "Errore nell'adeguamento delle scorte",
+    "offline_saved": "Prodotto salvato localmente. Verrà sincronizzato quando sarai online.",
+    "create_error": "Impossibile creare/modificare il prodotto",
+    "movements_offline": "I movimenti di scorte non sono disponibili offline.",
+    "stock_update_error": "Impossibile aggiornare le scorte",
+    "categories_offline": "La gestione delle categorie non è disponibile offline.",
+    "category_save_error": "Impossibile salvare la categoria",
+    "import_offline": "L'importazione richiede una connessione internet.",
+    "categories_imported": "categorie importate",
+    "categories_exist": "Tutte le categorie esistono già.",
+    "import_error": "Si è verificato un errore durante l'importazione.",
+    "pdf_headers": {
+      "product": "Prodotto",
+      "category": "Categoria",
+      "qty": "Qtà",
+      "unit": "Unità",
+      "purchase_price": "P. Acquisto",
+      "selling_price": "P. Vendita",
+      "value": "Valore"
+    }
   },
   "accounting": {
     "title": "Contabilità",
     "revenue": "Fatturato",
     "sales_count": "Vendite effettuate",
+    "sales_count_value": "{{count}} vendita/e",
     "avg_basket": "Carrello medio",
     "total_expenses": "Totale spese",
     "expenses": "Spese",
     "reports": "Report",
+    "report": "Report",
     "new_report": "Nuovo report",
     "add_expense": "Registra spesa",
+    "export_csv": "Esporta CSV",
+    "export_invoice": "Esporta fattura",
     "payment_methods": "Vendite per metodo di pagamento",
     "revenue_evolution": "Evoluzione ricavi",
     "daily": "Giornaliero",
@@ -162,6 +301,7 @@
     "delete_error": "Errore durante l'eliminazione",
     "confirm_expense": "Confermare la spesa di {{amount}}?",
     "no_expenses": "Nessuna spesa",
+    "expense_lines": "{{count}} riga/e di spesa",
     "expenses_categories": {
       "rent": "Affitto",
       "salary": "Stipendio",
@@ -189,7 +329,13 @@
     "invoice_ref": "Rif",
     "invoice_date": "Data",
     "payment_method_label": "Metodo",
-    "notes_label": "Note"
+    "notes_label": "Note",
+    "default_store_name": "Il mio Negozio Stock",
+    "default_address": "Indirizzo non specificato",
+    "total_revenue_kpi": "Fatturato totale",
+    "gross_margin_kpi": "Margine lordo",
+    "total_expenses_kpi": "Totale spese",
+    "report_generation_error": "Errore durante la generazione del report"
   },
   "orders": {
     "title": "Ordini",
@@ -281,11 +427,15 @@
   },
   "crm": {
     "title": "CRM & Fedeltà",
+    "clients": "Clienti",
     "total_spent": "Vendite totali",
     "active_clients": "Attivi (30g)",
     "loyalty_strategy": "Strategia di fedeltà",
     "points": "Punti fedeltà",
+    "points_desc": "Attivare l'accumulo di punti durante le vendite",
     "reward_threshold": "Soglia premio",
+    "promotions": "Promozioni",
+    "create_promotion": "Crea una promozione",
     "marketing": "Marketing",
     "whatsapp_campaign": "Campagna WhatsApp",
     "search_placeholder": "Cerca un cliente...",
@@ -295,7 +445,37 @@
     "tier_gold": "Oro",
     "tier_platinum": "Platino",
     "debt": "Debito",
-    "last_purchase": "Ultimo acquisto"
+    "debts": "Debiti",
+    "last_purchase": "Ultimo acquisto",
+    "never": "Mai",
+    "yesterday": "Ieri",
+    "sort_name": "Nome",
+    "sort_spent": "Spese",
+    "sort_recent": "Recente",
+    "sort_visits": "Visite",
+    "export_error": "Impossibile esportare i clienti",
+    "default_store": "Il mio Commercio",
+    "report_title": "REPORT CLIENTI & CRM",
+    "report_clients": "Clienti",
+    "report_total_revenue": "Fatturato totale",
+    "report_debts": "Debiti",
+    "client_list": "Lista clienti",
+    "col_name": "Nome",
+    "col_phone": "Telefono",
+    "col_tier": "Livello",
+    "col_purchases": "Acquisti",
+    "col_total_revenue": "Fatturato totale",
+    "col_debt": "Debito",
+    "delete_client": "Elimina cliente",
+    "delete_confirm": "Vuoi davvero eliminare questo cliente?",
+    "delete_promotion": "Elimina promozione",
+    "delete_promotion_confirm": "Vuoi davvero eliminare questa promozione?",
+    "no_phone_in_tier": "Nessun cliente con telefono in questa categoria",
+    "campaign_sent": "Campagna inviata",
+    "tab_info": "Info",
+    "tab_purchases": "Acquisti",
+    "tab_account": "Account",
+    "tab_contact": "Contatto"
   },
   "pos": {
     "title": "Cassa (POS)",
@@ -308,7 +488,35 @@
     "mobile_money": "Mobile Money",
     "credit": "Vendita a credito",
     "insufficient_stock": "Scorte insufficienti",
-    "success": "Vendita registrata"
+    "success": "Vendita registrata",
+    "credit_success": "Vendita a credito registrata con successo.",
+    "sale_error": "Impossibile registrare la vendita",
+    "credit_select_client": "Seleziona un cliente per la vendita a credito.",
+    "credit_confirmation": "Conferma Credito",
+    "stock_depleted": "Scorte esaurite",
+    "sku_not_found": "Nessun prodotto trovato con lo SKU:",
+    "unknown": "Sconosciuto",
+    "name_required": "Il nome è obbligatorio",
+    "client_created": "Cliente creato e selezionato",
+    "client_create_error": "Impossibile creare il cliente"
+  },
+  "alerts": {
+    "title": "Avvisi",
+    "unread": "non letto/i",
+    "all_good": "Tutto in ordine",
+    "no_alerts": "Nessun avviso",
+    "all_stocks_normal": "Tutte le tue scorte sono normali",
+    "ai_anomaly_detection": "Rilevamento anomalie IA",
+    "analysis_error": "Impossibile analizzare le anomalie",
+    "rule_update_error": "Impossibile modificare la regola",
+    "threshold_update_error": "Impossibile modificare la soglia",
+    "rule_low_stock": "Scorte basse",
+    "rule_out_of_stock": "Esaurito",
+    "rule_overstock": "Eccedenza",
+    "rule_dormant": "Prodotto dormiente",
+    "severity_critical": "Critico",
+    "severity_warning": "Attenzione",
+    "severity_info": "Info"
   },
   "supplier": {
     "dashboard": "Dashboard Fornitore",
